# project-manager

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: auto-tag.yml  release.yml
docs/: fetch_cursor_docs.py
docs/apple/: clean_apple_docs.py  keyhacinurls.md
docs/linear/: utls.md
docs/roadmap/: github-app-integration-planning-brief.md  how-project-manager-data-flow-works.md  tiptap-image-storage-tauri.md
docs/roadmap/db-mental-model/: problem.md  stages.md
docs/roadmap/log-db-agent-runs/: CLAUDE-RUN-TRACKING-SUMMARY.md
docs/tanstak/: colum-order-code.md  column-dnd.md  column-ordering-apis.md  column-ordering.md
docs/tauri/distribute/: dmg.md  macos_application_bundle.md  overview.md
docs/tauri/pipelines/: github.md
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  pty.rs
src/actions/: chat.ts
src/api/chat/: README.md  route.ts
src/components/: ActiveFilters.tsx  Agent.tsx  AgentFullPage.tsx  AgentTable.tsx  CommandPalette.tsx  DeleteProjectDialog.tsx  NewProjectDialog.tsx  Notes.tsx  ProjectActivityHeatmap.tsx  ProjectDetail.tsx  ProjectDetailContent.tsx  ProjectFullPage.tsx  ProjectTable.tsx  SavedViewPicker.tsx  Settings.tsx  Sidebar.tsx  StatusBadge.tsx  TaskDetail.tsx  TaskFullPage.tsx  TaskTable.tsx  Terminal.tsx  TerminalSessionPage.tsx  TerminalSessions.tsx  Toolbar.tsx  WorkspaceSetup.tsx  app-sidebar-logo.tsx  mode-toggle.tsx  note-icon-picker.tsx  task-assignee.tsx  task-badges.tsx
src/components/chat/: README.md  chat-bubble.tsx  chat-footer-bar.tsx  chat-fullpage.tsx  chat-header.tsx  chat-history.tsx  chat-input.tsx  chat-message-actions.tsx  chat-message.tsx  chat-messages-list.tsx  chat-panel.tsx  chat-provider.tsx  index.tsx
src/components/icons/: low-medium-high.tsx
src/components/sidebar/: AppSidebar.tsx  NotesSidebarContent.tsx  ProjectSidebarContent.tsx  TaskSidebarContent.tsx
src/components/tiptap/: README.md  bubble-menu.tsx  file-node.tsx  (+19 more)
src/hooks/: use-chat.tsx
src/lib/: agent-launch.ts  model-options.ts  note-icons.ts  perf.ts  pinned-projects.ts  recent-projects.ts  star-ui.ts
src/types/: chat.ts  supabase.ts
(+77 files in other folders)
