[package]
name = "project-manager"
version = "0.1.0"
description = "Local project workspace manager"
authors = []
edition = "2021"

[lib]
name = "project_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "project-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
