[package]
name = "project-manager"
version = "0.1.0"
description = "Local project workspace manager"
authors = []
edition = "2021"

[lib]
name = "project_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "project-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
keyring = { version = "3", features = ["apple-native"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
security-framework = "3.7"
security-framework-sys = "2.15"
zeroize = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
portable-pty = "0.8"
